tests/compile-fail/function_calls/check_arg_abi.stderr
error: Undefined Behavior: calling a function with ABI C using caller ABI Rust
 --> $DIR/check_arg_abi.rs:7:17
  |
7 |         let _ = malloc(0); //~ ERROR calling a function with ABI C using caller ABI Rust
  |                 ^^^^^^^^^ calling a function with ABI C using caller ABI Rust
  |
  = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
  = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
          
  = note: inside `main` at $DIR/check_arg_abi.rs:7:17

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

